# ccs-monitoring

./: .gitignore  README.md  generate_assets.py  plume_growth.py  plume_growth_v2.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Modul2_Vp_Anomali/: vp_anomaly.py
Modul3_Dashboard/: app.py
Modul4_Gassmann/: gassmann.py
Modul5_RealData/: gassmann_real.py
Modul6_AnomalyDetection/: anomaly_detection.py
Real_data/: gassmann_real.py
scripts/: run_plume.py  run_seismic.py
src/ccs_monitoring/: presets.py
src/ccs_monitoring.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ccs_monitoring/Anomaly/: anomaly_detection.py
src/ccs_monitoring/Dashboard/: app.py
src/ccs_monitoring/Plume/: plume_growth.py
src/ccs_monitoring/Rock_physics/: gassmann.py
src/ccs_monitoring/Seismic/: vp_anomaly.py
tests/: test_gassmann.py
well_data/: bag-info.txt  manifest-sha256.txt  manifest-sha512.txt  tagmanifest-sha256.txt  tagmanifest-sha512.txt
well_data/data/Wells_picks_Grid/: all.picks
well_data/data/Wells_released_2011/Well 159_A16/: 159-A-16.las  15_9_A16_wellposition
